.metals/.reports/metals/r_scala-toplevel-mtags_1687974231381
id: file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:[104..104) in Input.VirtualFile("file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala", "package com.bmmedia.playground

import scala.language.implicitConversions
import scala.util.Try

object ")
file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:6: error: expected identifier; obtained eof
object 
       ^